# simpleCRUD

./: .gitignore  CMakeLists.txt  README.md  dconfig  main.cpp
data/: Alarm.txt  AlarmActivation.txt  Equipment.txt
src/Alarm/: CMakeLists.txt  alarm.cpp  alarm.h
src/Equipment/: CMakeLists.txt  equipment.h
tools/: build.sh  configure.sh  run.sh
